New API URI for regathering URLs in error
